                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 15-05-2005 fixed HttpApi playfile command - not sure when it had become broken
  - 15-05-2005 added: option to retrieve file date in HttpApi GetDirectory command
  - 15-05-2005 fixed: TTF fonts could show bits of other characters under the current chars.
  - 15-05-2005 fixed: APEv2 tag reader also read + prioritized ID3v1 tags if the APEv2 tags weren't complete.
  - 15-05-2005 improved: Ringbuffer code.
  - 15-05-2005 added: added: Milkdrop, ported by MrC, (some) presets included and FATX renamed
  - 14-05-2005 changed: Performance enhancements to My Programs (requires new database to be created which will be slow initially when entering bookmarks)
  - 14-05-2005 fixed: GetDirectoryName did not work properly if file was in root of drive
  - 14-05-2005 added: WAV codec to paplayer
  - 14-05-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 14-05-2005 updated: Finnish language file (Thnx to jutski)
  - 14-05-2005 updated: Norwegian language file (Thnx to vnm)
  - 14-05-2005 changed: [1201081] Change XBMS directory to use mtime
  - 14-05-2005 fixed: exception when loading tag info if file has no extension
  - 14-05-2005 fixed: my music files tries to load tag info for folders and playlists
  - 12-05-2005 fixed: CD ripping to a Samba share
  - 12-05-2005 changed: defaults for time based seeking are now +/- 30 seconds, and +/- 5 minutes
			(if you're already running a version with this you'll need to change your values manually from settings.xml)
  - 12-05-2005 added: XBMC now resets to the EEPROM saved video mode upon start if 'Auto switch video mode based on game region' is enabled.